use softprops/action-gh-release for creating releases

--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -26,12 +26,6 @@ jobs:
           draft: false
           prerelease: true
       - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: main.pdf
-          asset_name: thesis.pdf
-          asset_content_type: application/pdf
+          files: main.pdf
