--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -16,16 +16,9 @@ jobs:
           name: thesis.pdf
           path: main.pdf
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v1.0-${{ github.run_number }}
-          release_name: Automated build ${{ github.run_number }}
-          draft: false
-          prerelease: true
-      - name: Upload Release Asset
         uses: softprops/action-gh-release@v1
         with:
           files: main.pdf
+          prerelease: true
+          name: Build ${{ github.run_number }}
+          tag_name: v1.0-${{ github.run_number }}
