--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Upload PDF as artifact
         uses: actions/upload-artifact@v2
         with:
-          name: thesis.pdf
+          name: main.pdf
           path: main.pdf
       - name: Create Release
         uses: softprops/action-gh-release@v1
